--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -201,7 +201,7 @@
 
           <td mat-cell *matCellDef="let student">
             <div class="form-group" *ngIf="student.seleccionado === 'Sí'">
-              <label for="usr">Numero del candidato:</label>
+              <label for="usr">Número del candidato:</label>
               <input type="text" class="form-control" id="usr" [(ngModel)]="student.numero">
             </div>
             <div class="form-group" *ngIf="student.seleccionado === 'Sí'">
