--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -18,7 +18,7 @@
     </main>
 </div> -->
 <div class="w3-sidebar w3-bar-block w3-animate-left" [style.display]="isSidebarOpen ? 'block' : 'none'" [style.backgroundColor]="'#09729f'" id="mySidebar">
-    <a *ngIf="mostrarTab2===true" (click)="navigateTo('vote')" class="w3-bar-item w3-button">
+    <a (click)="navigateTo('vote')" class="w3-bar-item w3-button">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hand-index-thumb-fill" viewBox="0 0 16 16">
         <path d="M8.5 1.75v2.716l.047-.002c.312-.012.742-.016 1.051.046.28.056.543.18.738.288.273.152.456.385.56.642l.132-.012c.312-.024.794-.038 1.158.108.37.148.689.487.88.716q.113.137.195.248h.582a2 2 0 0 1 1.99 2.199l-.272 2.715a3.5 3.5 0 0 1-.444 1.389l-1.395 2.441A1.5 1.5 0 0 1 12.42 16H6.118a1.5 1.5 0 0 1-1.342-.83l-1.215-2.43L1.07 8.589a1.517 1.517 0 0 1 2.373-1.852L5 8.293V1.75a1.75 1.75 0 0 1 3.5 0"/>
       </svg> &nbsp; Votaciones
@@ -30,16 +30,16 @@
     <a *ngIf="mostrarTab3===true" (click)="navigateTo('administracion')" class="w3-bar-item w3-button">
       <i class='fas fa-cogs'></i> &nbsp; Administración academica
     </a>
-     <a *ngIf="mostrarTab2===true" (click)="navigateTo('adminacademica')" class="w3-bar-item w3-button">
+     <a *ngIf="mostrarTab3===true" (click)="navigateTo('adminacademica')" class="w3-bar-item w3-button">
       <i class='fas fa-cogs'></i> &nbsp; Administración del sitio web
     </a>
        <a *ngIf="mostrarTab1===true" (click)="navigateTo('profesores')" class="w3-bar-item w3-button">
       <i class='fas fa-cogs'></i> &nbsp; Docentes asignación
     </a>
-          <a *ngIf="mostrarTab1===true" (click)="navigateTo('estudiantes')" class="w3-bar-item w3-button">
+          <a *ngIf="mostrarTab2===true" (click)="navigateTo('estudiantes')" class="w3-bar-item w3-button">
       <i class='fas fa-cogs'></i> &nbsp; Estudiantes
     </a>
-    <a *ngIf="mostrarTab1===true" (click)="navigateTo('usuarios')" class="w3-bar-item w3-button">
+    <a *ngIf="mostrarTab3===true" (click)="navigateTo('usuarios')" class="w3-bar-item w3-button">
       <i class='fas fa-users'></i> &nbsp; administración Usuarios
     </a>
   </div>
