--- a/src/app/administracion/administracion.component.html
+++ b/src/app/administracion/administracion.component.html
@@ -38,7 +38,7 @@
  
 
   </mat-tab>
-  <mat-tab label="Aignación de carga academica">
+  <mat-tab label="Asignación de carga academica">
     <mat-divider></mat-divider>
 
     <div>
