--- a/src/app/detalle-taller-component/detalle-taller-component.component.html
+++ b/src/app/detalle-taller-component/detalle-taller-component.component.html
@@ -39,7 +39,7 @@
                   placeholder="Escribe aquí tus observaciones..."></textarea>
       </div>
 
-      <button type="submit" class="btn btn-success" *ngIf="calificado==false">
+      <button type="submit" class="btn btn-success" >
         <i class="bi bi-send-check me-1"></i> Enviar respuesta
       </button>
 <h4>
