--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   font-family: Helvetica, Arial, sans-serif;
-  background: linear-gradient(45deg, #fcfa7a86, #4597f5c9, #5db455, #e4c3d8);
+  background: linear-gradient(100deg, #fcfa7a86, #4597f5c9, #5db455, #e4c3d8);
   background-size: 400% 400%;
   animation: fondoAnimado 10s ease infinite;
   min-height: 100vh;
@@ -300,6 +300,32 @@
     </div>
   </div>
 </section>
+<section style="margin: 4rem auto; max-width: 1200px; padding: 2rem; text-align: center;">
+  <h2 style="font-size: 2.2rem; margin-bottom: 2rem; font-weight: bold; color: #1e3a5f; font-family: 'Poppins', sans-serif;">
+    Misión y Visión
+  </h2>
+
+  <div style="display: flex; flex-direction: column; gap: 2rem;">
+
+    <!-- Misión -->
+    <div style="background-color: #f8f9fa; padding: 2rem; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); text-align: justify;">
+      <h3 style="color: #388e3c; font-size: 1.5rem; margin-bottom: 1rem;"> - Misión</h3>
+      <p style="color: #333; font-size: 1rem; line-height: 1.7; font-family: 'Poppins', sans-serif;">
+        La I.E.M. Antonio Nariño, es inclusiva; forma y desarrolla integralmente a niños, jóvenes y adultos con capacidad crítica, reflexiva y analítica en los diferentes campos de formación, con fundamentos pedagógicos, sentido ético, moral y humanístico, para que sean autónomos y emprendedores; accedan a otros niveles de educación superior y se sientan responsables de su proyecto de vida individual y social.
+      </p>
+    </div>
+
+    <!-- Visión -->
+    <div style="background-color: #f8f9fa; padding: 2rem; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); text-align: justify;">
+      <h3 style="color: #254b9c; font-size: 1.5rem; margin-bottom: 1rem;"> - Visión</h3>
+      <p style="color: #333; font-size: 1rem; line-height: 1.7; font-family: 'Poppins', sans-serif;">
+        La Institución Educativa Municipal Antonio Nariño para el periodo 2024-2029, será reconocida por la formación personal, cultural y social de niños, jóvenes y adultos, mediante una oferta educativa integral y flexible que responda al derecho de una educación para todos, la participación y la democracia.
+      </p>
+    </div>
+
+  </div>
+</section>
+
 <footer style="background-color: #cdd4db; padding: 2.5rem 1rem; margin-top: 4rem; border-top: 1px solid #d0e0ef;">
   <div style="max-width: 1200px; margin: 0 auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem; text-align: left;">
 
