--- a/src/app/admin-academica/admin-academica.component.html
+++ b/src/app/admin-academica/admin-academica.component.html
@@ -32,12 +32,16 @@
                         <br>
                         <input type="file" (change)="onFileSelected($event, student)" accept="image/*">
                         &nbsp;
-                        <a mat-button class="btn btn-success btn-sm" (click)="uploadImage(student)">
-                            <i class="fa fa-save">Guardar</i>
+                        <a mat-button class="btn btn-success btn-sm" (click)="uploadImage(student)"
+                            matTooltip="Guardar">
+                            <i class="fa fa-save"></i>
                         </a> &nbsp;
-                        <a mat-button class="btn btn-danger btn-sm" (click)="uploadImage(student)">
-                            <i class="fa fa-trash">Eliminar</i>
+
+                        <a mat-button class="btn btn-danger btn-sm" (click)="uploadImage(student)"
+                            matTooltip="Eliminar">
+                            <i class="fa fa-trash"></i>
                         </a>
+
                         <!-- Mostrar la imagen subida -->
                         <img *ngIf="student.uploadedImageUrl" [src]="student.uploadedImageUrl" alt="Imagen subida"
                             style="max-width: 200px; display: block; margin-top: 10px;">
@@ -54,7 +58,7 @@
 
         </div>
     </mat-tab>
-  <mat-tab label="Imagenes slider pagina">
+    <mat-tab label="Imagenes slider pagina">
         <mat-divider></mat-divider>
 
 
@@ -89,10 +93,11 @@
                         <br>
                         <input type="file" (change)="onFileSelected($event, student)" accept="image/*">
                         &nbsp;
-                        <a mat-button class="btn btn-success btn-sm" (click)="uploadImage(student)">
+                        <a mat-button class="btn btn-success btn-sm" (click)="uploadImage(student)"  matTooltip="Guardar">
+                            
                             <i class="fa fa-save"></i>
                         </a> &nbsp;
-                        <a mat-button class="btn btn-danger btn-sm" (click)="uploadImage(student)">
+                        <a mat-button class="btn btn-danger btn-sm" (click)="uploadImage(student)"   matTooltip="Eliminar">
                             <i class="fa fa-trash"></i>
                         </a>
                         <!-- Mostrar la imagen subida -->
@@ -122,7 +127,7 @@
             <table mat-table [dataSource]="dataSource2" matSort class="mat-elevation-z8">
 
 
- 
+
                 <ng-container matColumnDef="Detalle del evento">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> descripción</th>
                     <td mat-cell *matCellDef="let student"> {{ student.descripcion }} </td>
@@ -142,7 +147,7 @@
                 </ng-container>
                 <ng-container matColumnDef="Opciones">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Opciones
-                        <a class="btn-circle" (click)="openDialog()">
+                        <a class="btn-circle" (click)="openDialog()"   matTooltip="Agregar enlace para documento">
                             <i class="fa-solid fa-plus"></i>
                         </a>
 
@@ -152,7 +157,7 @@
 
                     <td mat-cell *matCellDef="let student">
 
-                        <a class="btn-circle btn-danger" (click)="eliminarHeader(student.id_header)">
+                        <a class="btn-circle btn-danger" (click)="eliminarHeader(student.id_header)"    matTooltip="Eliminar">
                             <i class="fa-solid fa-trash"></i>
                         </a>
                     </td>
@@ -222,7 +227,7 @@
             <table mat-table [dataSource]="dataSource3" matSort class="mat-elevation-z8">
 
 
-  <ng-container matColumnDef="Titulo">
+                <ng-container matColumnDef="Titulo">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Titulo</th>
                     <td mat-cell *matCellDef="let student"> {{ student.titulo }} </td>
                 </ng-container>
