--- a/src/app/admin-academica/admin-academica.component.html
+++ b/src/app/admin-academica/admin-academica.component.html
@@ -210,7 +210,7 @@
                     </div>
 
                     <!-- Botón -->
-                    <a class="btn-circle btn-success" (click)="crearCard()">
+                    <a class="btn-circle btn-success" (click)="crearCard()"matTooltip="Guardar">
                         <i class="fa-solid fa-check"></i>
                     </a>
                 </mat-dialog-content>
@@ -245,7 +245,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Opciones">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Opciones
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header    matTooltip="Agregar enlace para documento"> Opciones
                         <a class="btn-circle" (click)="openDialogE()">
                             <i class="fa-solid fa-plus"></i>
                         </a>
@@ -304,7 +304,7 @@
                     </div>
 
                     <!-- Botón -->
-                    <a class="btn-circle btn-success" (click)="crearEvento()">
+                    <a class="btn-circle btn-success" (click)="crearEvento()"   matTooltip="Guardar">
                         <i class="fa-solid fa-check"></i>
                     </a>
                 </mat-dialog-content>
