--- a/src/app/admin-academica/admin-academica.component.html
+++ b/src/app/admin-academica/admin-academica.component.html
@@ -38,7 +38,7 @@
                         </a> &nbsp;
 
                         <a mat-button class="btn btn-danger btn-sm" (click)="uploadImage(student)"
-                            matTooltip="Eliminar">
+                            matTooltip="Eliminar"matTooltip="Eliminar" >
                             <i class="fa fa-trash"></i>
                         </a>
 
