--- a/src/app/admin-academica/admin-academica.component.html
+++ b/src/app/admin-academica/admin-academica.component.html
@@ -38,7 +38,7 @@
                         </a> &nbsp;
 
                         <a mat-button class="btn btn-danger btn-sm" (click)="uploadImage(student)"
-                            matTooltip="Eliminar"matTooltip="Eliminar" >
+                            matTooltip="Eliminar">
                             <i class="fa fa-trash"></i>
                         </a>
 
@@ -97,7 +97,7 @@
                             
                             <i class="fa fa-save"></i>
                         </a> &nbsp;
-                        <a mat-button class="btn btn-danger btn-sm" (click)="uploadImage(student)"   matTooltip="Eliminar">
+                        <a mat-button class="btn btn-danger btn-sm" (click)="uploadImage(student)">
                             <i class="fa fa-trash"></i>
                         </a>
                         <!-- Mostrar la imagen subida -->
@@ -256,7 +256,7 @@
 
                     <td mat-cell *matCellDef="let student">
 
-                        <a class="btn-circle btn-danger" (click)="deteleEventos(student.id_evento)">
+                        <a class="btn-circle btn-danger" (click)="deteleEventos(student.id_evento)" matTooltip="Eliminar">
                             <i class="fa-solid fa-trash"></i>
                         </a>
                     </td>
