--- a/src/app/admin-academica/admin-academica.component.html
+++ b/src/app/admin-academica/admin-academica.component.html
@@ -245,7 +245,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Opciones">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header    matTooltip="Agregar enlace para documento"> Opciones
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header    matTooltip="Agregar nuevo evento institucional"> Opciones
                         <a class="btn-circle" (click)="openDialogE()">
                             <i class="fa-solid fa-plus"></i>
                         </a>
