--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -135,8 +135,9 @@
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef>Acciones</th>
       <td mat-cell *matCellDef="let user">
-        <button mat-raised-button color="accent" class="me-2" (click)="editarUsuario(user)">Editar</button>
-        <button mat-raised-button color="warn" (click)="eliminarUsuario(user.id)">Eliminar</button>
+        <button type="button" class="btn btn-success" (click)="editarUsuario(user)">Editar</button>
+        &nbsp;
+        <button type="button" class="btn btn-warning" (click)="eliminarUsuario(user.id)">Eliminar</button>
       </td>
     </ng-container>
 
