--- a/src/app/admin-academica/admin-academica.component.html
+++ b/src/app/admin-academica/admin-academica.component.html
@@ -1,9 +1,6 @@
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
-    <mat-tab label="Login administracion">
+    <mat-tab label="Imagenes inicio sesión">
         <mat-divider></mat-divider>
-
-
-
         <div class="table-container">
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
@@ -37,7 +34,7 @@
                             <i class="fa fa-save"></i>
                         </a> &nbsp;
 
-                        <a mat-button class="btn btn-danger btn-sm" (click)="uploadImage(student)"
+                        <a mat-button class="btn btn-danger btn-sm" (click)="deleteImagen(student)"
                             matTooltip="Eliminar">
                             <i class="fa fa-trash"></i>
                         </a>
@@ -53,8 +50,6 @@
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
 
-            <mat-paginator #paginatorLogin [pageSize]="15" [pageSizeOptions]="[5, 10, 15, 20]"
-                showFirstLastButtons></mat-paginator>
 
         </div>
     </mat-tab>
@@ -97,7 +92,7 @@
                             
                             <i class="fa fa-save"></i>
                         </a> &nbsp;
-                        <a mat-button class="btn btn-danger btn-sm" (click)="uploadImage(student)">
+                        <a mat-button class="btn btn-danger btn-sm" (click)="deleteImagen(student)">
                             <i class="fa fa-trash"></i>
                         </a>
                         <!-- Mostrar la imagen subida -->
@@ -111,8 +106,7 @@
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
 
-            <mat-paginator #paginatorLogin [pageSize]="15" [pageSizeOptions]="[5, 10, 15, 20]"
-                showFirstLastButtons></mat-paginator>
+            
 
         </div>
     </mat-tab>
